= Changelog

== v2025.10.0 (work in progress)

=== Shapes

=== Breaking changes

=== Dependency update

=== Bug fixes

- https://github.com/eclipse-syson/syson/issues/1454[#1454] [import] Fix an issue where importing textual models with `MetadataAccessExpression` failed.

=== Improvements

=== New features


== v2025.8.0

=== Shapes

- Added a duplicate object menu item for SysMLv2 elements in the _Explorer_ view.
- Added a diagram tool to duplicate graphical nodes in diagrams.

=== Breaking changes
- https://github.com/eclipse-syson/syson/issues/1384[#1384] [metamodel] Aligned the metamodel with the SysMLv2 2025-04 specification released in April 2025 (see https://www.omg.org/spec/SysML/ for more details) and the KerML 2025-04 specification released in April 2025 (see https://www.omg.org/spec/KerML/ for more details).

**In any case, download all your existing models/projects and back up your database before upgrading to 2025.8.0 (as always).**

The new concepts are:

* `InstantiationExpression` (inherits from `Expression`)
* `ConstructorExpression` (inherits from `InstantiationExpression`)

The new attributes are:

* On `Feature`
** `isConstant : EBoolean`
* On `Usage`
** `mayTimeVary : EBoolean`

The new operations are:

* On `Element`
** `path() : EString`
* On `Feature`
** `isFeaturingType(Type) : EBoolean`
** `canAccess(Feature) : EBoolean`
* On `Type`
** `isCompatibleWith(Type) : EBoolean`
** `allRedefinedFeaturesOf(Membership) : Feature`

The new references are:

* On `Connector`
** `defaultFeaturingType : Type`
* On `InstantiationExpression`
** `argument : Expression`

The updates are:

* The concept `FlowConnectionDefinition` has been renamed to `FlowDefinition`.
* The concept `FlowConnectionUsage` has been renamed to `FlowUsage`.
* The concept `SuccessionFlowConnectionUsage` has been renamed to `SuccessionFlowUsage`.
* The concept `ItemFlow` has been renamed to `Flow`.
** The reference `itemFlowEnd : ItemFlowEnd` has been renamed to `flowEnd : FlowEnd`.